<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    >

<LinearLayout android:orientation="horizontal"
		android:layout_width="fill_parent" android:layout_height="wrap_content">
<EditText android:id="@+id/productname" 
  		android:layout_width="wrap_content" 
  		android:hint="@string/productname"
  		android:maxLines="1" 
  		android:layout_weight="2" 
  		android:layout_height="wrap_content">
  </EditText>
  
 <Button  android:id="@+id/saveproduct" 
 	android:layout_width="wrap_content" 
 	android:layout_height="wrap_content"
 	android:text="@string/saveproduct"
 	>
 	</Button>
</LinearLayout>
  
  <EditText android:id="@+id/addenumber" 
  		android:layout_height="wrap_content" 
  		android:layout_width="fill_parent" 
  		android:hint="@string/add_enumber"
  		android:maxLines="1" android:inputType="phone">
  </EditText>

  <ListView android:id="@+id/list2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"      
        android:layout_weight="2"
        />

        	
  <ListView android:id="@android:id/list" android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:isScrollContainer="true"
		>
  </ListView>



  <TextView android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/empty_db"/>


</LinearLayout>